[tool.poetry]
name = "arbm-core"
version = "0.4.1"
description = ""
authors = ["Anita-Mutemi <anitajehu13@gmail.com>"]
packages = [{include = "arbm_core"}]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.16"
pydantic = "^1.10"
psycopg2-binary = "^2.9.6"
loguru = "^0.7.0"
alembic = "^1.11.1"
pytz = "^2023.3"
pandas = "2.0.2"
ordered-enum = "^0.0.8"
pymongo = "^4.5.0"
deprecated = "^1.2.14"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
black = "^22.6.0"
mypy = "^0.910"
